--- a/www/index.html
+++ b/www/index.html
@@ -21,64 +21,100 @@
 
 <body>
 
-<!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="nav-bar">
+  <!-- Navbar -->
+  <div class="w3-top">
+    <div class="w3-bar w3-white w3-card" id="nav-bar">
 
-    <!-- Navbar links -->
-    <div class="w3-right w3-hide-small w3-hide-medium">
-      <a href="#home" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button"><i class="fa fa-cog"></i> ACCOUNT SETTINGS</a>
-      <a href="#home" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button"><i class="fa fa-wrench"></i> MANAGE GROUP</a>
-      <a href="#home" onclick="showDiv('alert-group-div', w3_close)" class="w3-bar-item w3-button"><i class="fa fa-exclamation-triangle"></i> ALERT GROUP</a>
+      <!-- Navbar links -->
+      <div class="w3-right w3-hide-small w3-hide-medium">
+        <a href="#home" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button no-click-effect"><i class="fa fa-cog"></i>
+          SETTINGS</a>
+        <a href="#home" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect"><i class="fa fa-wrench"></i>
+          GROUP</a>
+        <a href="#home" onclick="showDiv('alert-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect"><i class="fa fa-exclamation-triangle"></i>
+          ALERT</a>
+      </div>
+
+      <!-- Hide links on small screens and replace them with a menu icon -->
+      <a id="nav-button" href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large w3-display-left no-click-effect"
+        onclick="w3_open()">
+        <i id="nav-button-icon" class="fa fa-bars"></i>
+      </a>
+      <a id="nav-header" href="#home" onclick="showDiv('map-div', w3_close)" class="w3-bar-item w3-button w3-display-middle w3-wide no-click-effect">KIT</a>
+    </div>
+  </div>
+
+  <!-- Sidebar on small screens when clicking the menu icon -->
+  <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-large" style="display:none; z-index:4; width: 75vw;"
+    id="side-nav">
+    <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 no-click-effect-black">Close
+      &times;</a>
+    <hr class="side-nav-divider">
+    <a href="#home" id="account-settings-side-nav-button" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
+        class="side-nav-icon fa fa-cog fa-lg">
+      </i> ACCOUNT SETTINGS</a>
+    <a href="#home" id="manage-group-side-nav-button" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
+        class="side-nav-icon fa fa-wrench fa-lg">
+      </i> MANAGE GROUP</a>
+    <a href="#home" id="alert-group-side-nav-button" onclick="showDiv('alert-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
+        class="side-nav-icon fa fa-exclamation-triangle fa-lg">
+      </i> ALERT GROUP</a>
+  </nav>
+
+  <!-- Overlay for when side nav is opened -->
+  <div id="nav-overlay" class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
+
+  <!-- App home page main content section -->
+  <div id="home">
+
+    <!-- Map section (content is injected from index.js) -->
+    <div id="map-div" name="kit" class="w3-display-container app-section"></div>
+
+    <!-- Account settings section -->
+    <div id="account-settings-div" name="account settings" class="w3-display-container app-section">
+      <h3 class="w3-center w3-padding-32 w3-opacity">ACCOUNT SETTINGS</h3>
     </div>
 
-    <!-- Hide links on small screens and replace them with a menu icon -->
-    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-hide-large" onclick="w3_open()">
-      <i class="fa fa-bars"></i>
-    </a>
-    <a href="#home" onclick="showDiv('map-div', w3_close)" class="w3-bar-item w3-button w3-display-middle w3-wide">KIT</a>
+    <!-- Manage group section -->
+    <div id="manage-group-div" name="manage group" class="w3-display-container app-section">
+      <div id="manage-group-user-div" class="w3-container">
+        <!-- user icon -->
+        <div class="w3-container w3-cell w3-cell-middle">
+          <span class="w3-badge w3-border w3-center user-icon">
+            <p class="user-icon-text">JS</p>
+          </span>
+        </div>
+        <!-- user name and email -->
+        <div class="w3-container w3-cell">
+          <p class="username-text">John Smith</p>
+          <p class="user-email-text">jmsith@gmail.com</p>
+        </div>
+        <hr style="margin-bottom: 10px;">
+      </div>
+      <div id="manage-group-invite-div" class="w3-container">
+        <div class="w3-padding-small">
+          <p style="margin-top: 0px;">INVITE MORE MEMBERS</p>
+        </div>
+        <form id="invite-form" class="w3-padding-small">
+          <label>EMAIL</label>
+          <input class="w3-input" type="text">
+          <label>NAME</label>
+          <input class="w3-input" type="text">
+          <br>
+          <button id="invite-button" class="w3-button w3-white w3-text-blue w3-border w3-border-blue w3-round w3-right no-click-effect button-primary">Invite</button>
+        </form>
+      </div>
+    </div>
+
+    <!-- Alert group section -->
+    <div id="alert-group-div" name="alert group" class="w3-display-container app-section">
+      <h3 class="w3-center w3-padding-32 w3-opacity">ALERT GROUP</h3>
+    </div>
   </div>
-</div>
 
-<!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-large" style="display:none; z-index:4; width: 75vw;"
-  id="side-nav">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close
-    &times;</a>
-  <hr class="side-nav-divider">
-  <a href="#home" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button"><i class="side-nav-icon fa fa-cog fa-lg"></i> ACCOUNT SETTINGS</a>
-  <a href="#home" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button"><i class="side-nav-icon fa fa-wrench fa-lg"></i> MANAGE GROUP</a>
-  <a href="#home" onclick="showDiv('alert-group-div', w3_close)" class="w3-bar-item w3-button"><i class="side-nav-icon fa fa-exclamation-triangle fa-lg"></i> ALERT GROUP</a>
-</nav>
-
-<!-- Overlay for when side nav is opened -->
-<div id="nav-overlay" class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
-
-<!-- App home page main content section -->
-<div id="home">
-
-  <!-- Map section (content is injected from index.js) -->
-  <div id="map-div" class="w3-display-container app-section"></div>
-
-  <!-- Account settings section -->
-  <div id="account-settings-div" class="w3-display-container app-section">
-    <h3 class="w3-center w3-padding-32 w3-opacity">ACCOUNT SETTINGS</h3>
-  </div>
-
-  <!-- Manage group section -->
-  <div id="manage-group-div" class="w3-display-container app-section">
-    <h3 class="w3-center w3-padding-32 w3-opacity">MANAGE GROUP</h3>
-  </div>
-
-  <!-- Alert group section -->
-  <div id="alert-group-div" class="w3-display-container app-section">
-    <h3 class="w3-center w3-padding-32 w3-opacity">ALERT GROUP</h3>
-  </div>
-</div>
-
-<script type="text/javascript" src="cordova.js"></script>
-<script type="text/javascript" src="./js/index.js"></script>
-<script type="text/javascript" src="./js/appSettings.js"></script>
+  <script type="text/javascript" src="cordova.js"></script>
+  <script type="text/javascript" src="./js/index.js"></script>
+  <script type="text/javascript" src="./js/appSettings.js"></script>
 
 </body>
 
