--- a/www/index.html
+++ b/www/index.html
@@ -39,29 +39,26 @@
           onclick="w3_open()">
           <i id="nav-button-icon" class="fa fa-bars"></i>
         </a>
-        <a id="nav-header" href="#home" onclick="showDiv('map-div', w3_close)" class="w3-bar-item w3-button w3-wide w3-center no-click-effect">KIT</a>
+        <a id="nav-header" href="#home" class="w3-bar-item w3-button w3-wide w3-center no-click-effect" onclick="showDiv('map-div', w3_close)">KIT</a>
       </div>
     </div>
 
     <!-- Sidebar when clicking the menu icon -->
-    <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left" style="display:none; z-index:4; width: 75vw;"
-      id="side-nav">
+    <nav id="side-nav" class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left">
       <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 no-click-effect-black">Close
         &times;</a>
       <hr class="side-nav-divider">
-      <a href="#home" id="account-settings-side-nav-button" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
-          class="side-nav-icon fa fa-cog fa-lg">
-        </i> ACCOUNT SETTINGS</a>
-      <a href="#home" id="manage-group-side-nav-button" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
-          class="side-nav-icon fa fa-wrench fa-lg">
-        </i> MANAGE GROUP</a>
-      <a href="#home" id="alert-group-side-nav-button" onclick="showDiv('alert-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black"><i
-          class="side-nav-icon fa fa-exclamation-triangle fa-lg">
-        </i> ALERT GROUP</a>
+      <a href="#home" id="account-settings-side-nav-button" onclick="showDiv('account-settings-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black">
+        <i class="side-nav-icon fa fa-cog fa-lg"></i> ACCOUNT SETTINGS</a>
+      <a href="#home" id="manage-group-side-nav-button" onclick="showDiv('manage-group-div', w3_close)" class="w3-bar-item w3-button no-click-effect-black">
+        <i class="side-nav-icon fa fa-wrench fa-lg"></i> MANAGE GROUP</a>
+      <a href="javascript:void(0)" id="alert-group-side-nav-button" onclick="showContextDiv('alert-group-div', w3_close)"
+        class="w3-bar-item w3-button no-click-effect-black context-div">
+        <i class="side-nav-icon fa fa-exclamation-triangle fa-lg"></i> ALERT GROUP</a>
     </nav>
 
-    <!-- Overlay for when side nav is opened -->
-    <div id="nav-overlay" class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
+    <!-- Overlay for when side nav or alert group div is opened -->
+    <div id="overlay-div" class="w3-overlay" onclick="w3_close()" style="cursor:pointer"></div>
 
     <!-- App home page main content div -->
     <div id="home">
@@ -105,9 +102,25 @@
         </div>
       </div>
 
-      <!-- Alert group section -->
+      <!-- Alert group div -->
       <div id="alert-group-div" name="alert group" class="w3-display-container app-div">
-        <h3 class="w3-center w3-padding-32 w3-opacity">ALERT GROUP</h3>
+        <div id="alert-group-context-menu" class="w3-panel w3-round-xlarge w3-white w3-display-middle w3-center">
+          <p><b>ALERT GROUP</b></p>
+          <p class="">Immediately notify the rest of the members in your group.</p>
+          <hr>
+          <a href="#home" id="alert-cancel-button" onclick="hideContextDiv('alert-group-div')" class="w3-bar-item w3-button no-click-effect">
+            I'M LOST</a>
+          <hr>
+          <a href="#home" id="alert-cancel-button" onclick="hideContextDiv('alert-group-div')" class="w3-bar-item w3-button no-click-effect">
+            WE HAVE TO LEAVE</a>
+          <hr>
+          <a href="#home" id="alert-cancel-button" onclick="hideContextDiv('alert-group-div')" class="w3-bar-item w3-button no-click-effect">
+            BATTERY IS LOW</a>
+          <hr>
+          <a href="#home" id="alert-cancel-button" onclick="hideContextDiv('alert-group-div')" class="w3-bar-item w3-button no-click-effect">
+            <b>CANCEL</b>
+          </a>
+        </div>
       </div>
     </div>
   </section>
