--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
   <section id="app-login" class="app-section w3-display-container" style="display: none;">
     <form id="login-form" class="w3-container">
       <img id="login-form-image" src="./assets/kit-logo.png" alt="kit app logo">
-      <div id="login-form-input-div">
+      <div id="login-form-input-div" class="login-form-inputs media-large ">
         <input class="w3-input w3-border login-form-input" type="text" placeholder="username">
         <input class="w3-input w3-border login-form-input" type="text" placeholder="password">
         <input id="login-button" class="w3-input w3-white login-form-input w3-text-blue w3-border w3-border-blue" type="button"
