fixed an issue with the polling and cleaned code a bit (console logs, comments, etc)

--- a/www/index.html
+++ b/www/index.html
@@ -165,8 +165,8 @@
       <!-- Remove user div -->
       <div id="remove-user-div" name="alert group" class="w3-display-container app-div">
         <div id="manage-group-context-menu" class="w3-panel w3-round-xlarge w3-white w3-display-middle w3-center context-menu">
-          <p id="manage-group-context-title"><b>Test User</b></p>
-          <p id="manage-group-context-subtitle">Remove Test User from the group?</p>
+          <p id="manage-group-context-title"><b>REMOVE USER</b></p>
+          <p id="manage-group-context-subtitle">Remove user from the group?</p>
           <hr>
           <a href="#home" id="alert-cancel-button" onclick="hideContextDiv('remove-user-div')" class="w3-bar-item w3-button no-click-effect">
             REMOVE</a>
