added a readme, last script files, and cleaned more code

--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,7 @@
             <a href="#home" id="login-button" class="w3-left w3-bar-item w3-button w3-white w3-border w3-border-blue w3-text-blue w3-round login-form-input no-click-effect-blue-rev"
               style="width:48.5%" onclick="authenticate()">Log in</a>
             <a href="#home" id="signup-button" class="w3-right w3-bar-item w3-button w3-blue w3-round login-form-input no-click-effect-blue"
-              style="width:48.5%" onclick="initializeHomePage()">
+              style="width:48.5%">
               Sign up</a>
           </div>
         </div>
